# clip-bot

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  bot.py  docker-compose.yml  fsutils.py  pyproject.toml  requirements.txt  tasks.py  test_timecode.py  timecode.py  tox.ini  yt.py
.github/workflows/: ci.yml
bot/: __main__.py  bot.py  callback_data.py  clip_bot.py  clip_info.py  keyboard.py  start_option.py  text.py  timecode.py
bot/youtube/: __init__.py  url.py  video.py
tests/: conftest.py  test_handlers.py  test_timecode.py  test_yt_url.py
