[tool.poetry]
name = "yt-clip-bot"
version = "0.1.0"
description = "Telegram bot for making youtube clips"
authors = ["Mikita Chabatarovich <mikita.chabatarovich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.12"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
